tests/errors/wrong_val_57/e6.src
.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@x
MOVE LF@x int@5
POPFRAME
SUB TF@x TF@x int@5
PUSHFRAME

IDIV LF@x LF@x LF@x
